# NGTD_App

./: .gitignore  .readthedocs.yaml  Dockerfile  INSTALL.md  README.md  config.py  environment.yml  main.py  mkdocs.yml  ngtd.db  pyproject.toml  requirements.txt
bed_repository/: R134_GRCh38_V2.4.bed  R169_GRCh38_V1.1.bed  R19_GRCh37_V1.1.bed  R19_GRCh38_V1.1.bed  R207_GRCh37_V4.3.bed  R207_GRCh38_V4.3.bed  R208_GRCh37_V2.11.bed  R208_GRCh38_V2.11.bed
docs/: For Assessor.md  INSTALL.md  LICENSE.md  LICENSE.txt  MANUAL.md  README.md  environment.yml  index.md  project_gitflow.xml  requirements.txt
logs/: .gitignore  NGTD.log.2024-01-11
src/: BED_files.py  cli.py  command_line_interface.py  create_beds.py  data_import.py  database.py  get_directory.py  logger.py  ngtd.db  panelapp_requests.py  query_database.py  test.py
test/: cli_test.py  conftest.py  create_beds_test.py  data_import_test.py  get_directory_test.py  main_test.py  panelapp_requests_test.py
