[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ngtd_app"
dynamic = ["version"]
dependencies = [ # taken from requirements.txt
  "pytest==7.4.2",
  "argparse==1.4.0",
  "requests==2.31.0"
]
requires-python = ">=3.12"
authors = [
  {name = "Dolapo Ajayi", email = "dolapo.ajayi@icr.ac.uk"},
  {name = "Niall Gallop", email = "niall.gallop1@nhs.net"},
  {name = "Caroline Riehl", email = "c.riehl@rbht.nhs.uk"},
  {name = "Danielle Scales", email = "danielle.scales@nhs.net"}
]
maintainers = [
  {name = "Dolapo Ajayi", email = "dolapo.ajayi@icr.ac.uk"},
  {name = "Niall Gallop", email = "niall.gallop1@nhs.net"},
  {name = "Caroline Riehl", email = "c.riehl@rbht.nhs.uk"},
  {name = "Danielle Scales", email = "danielle.scales@nhs.net"}
]
description = "A tool to manage gene panels for NHS National genomic test directory tests in the laboratory"
readme = "README.md"
keywords = ["gene", "gene panel", "genomic test", "national genomic test directory", "NGTD"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  # Languages
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  # License
  "License :: OSI Approved :: MIT License",
  # Prevent the package from being uploaded to PyPI
  "Private :: Do Not Upload"
]

[project.urls]
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/STP-Software-Engineers-2022/NGTD_App"
Issues = "https://github.com/STP-Software-Engineers-2022/NGTD_App/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"