[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "ngtd_app"
version = "1.0"

dependencies = [
  "argparse==1.4.0",
  "certifi==2023.7.22",
  "charset-normalizer==3.3.2",
  "config==0.5.1",
  "coverage==7.4.0 ",
  "idna==3.4",
  "iniconfig==2.0.0",
  "mkdocs==1.5.3",
  "packaging==23.2",
  "pluggy==1.3.0",
  "pytest==7.4.2",
  "pytest-cov==4.1.0",
  "requests==2.31.0",
  "setuptools==68.0.0",
  "urllib3==2.0.7",
  "wheel==0.37.1"
]

requires-python = ">=3.9"

authors = [
  {name = "Dolapo Ajayi", email = "dolapo.ajayi@icr.ac.uk"},
  {name = "Niall Gallop", email = "niall.gallop1@nhs.net"},
  {name = "Caroline Riehl", email = "c.riehl@rbht.nhs.uk"},
  {name = "Danielle Scales", email = "danielle.scales@nhs.net"}
]
maintainers = [
  {name = "Dolapo Ajayi", email = "dolapo.ajayi@icr.ac.uk"},
  {name = "Niall Gallop", email = "niall.gallop1@nhs.net"},
  {name = "Caroline Riehl", email = "c.riehl@rbht.nhs.uk"},
  {name = "Danielle Scales", email = "danielle.scales@nhs.net"}
]
description = "A tool to manage gene panels for NHS National genomic test directory tests in the laboratory"
readme = "README.md"
keywords = ["gene",
            "gene panel",
            "genomic test",
            "national genomic test directory",
            "NGTD"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  # Languages
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  # License
  "License :: OSI Approved :: MIT License",
  # Prevent the package from being uploaded to PyPI
  "Private :: Do Not Upload"
]

[project.urls]
Repository = "https://github.com/STP-Software-Engineers-2022/NGTD_App"
Issues = "https://github.com/STP-Software-Engineers-2022/NGTD_App/issues"
Documentation = "https://ngtd-app-ngtd-app.readthedocs-hosted.com/en/latest/"